--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
+  sqflite: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
